--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   flutter_riverpod: ^2.4.3
   cached_network_image: ^3.3.0
+  cloud_firestore: ^4.9.3
 
 dev_dependencies:
   flutter_test:
