updated some UI for all screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   custom_info_window: ^1.0.1
   intl: ^0.18.1
   sticky_headers: ^0.3.0+2
+  google_fonts: ^4.0.4
+  js: ^0.6.3
 
 dev_dependencies:
   flutter_test:
