--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,7 +98,7 @@ flutter:
   #    - green.png
 
   assets:
-    - assets/green.png
+    - assets/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
