--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
 
   assets:
     - assets/green.png
+    - assets/marker.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
