--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   flutter_riverpod: ^2.4.3
   cached_network_image: ^3.3.0
-  cloud_firestore: ^4.9.3
+  cloud_firestore: ^4.13.5
   geolocator: ^10.1.0
   geocoder_plus: ^0.0.1
   geocoder2: ^1.4.0
@@ -69,6 +69,7 @@ dependencies:
   js: ^0.6.3
   firebase_storage: ^11.5.5
   collection: ^1.17.2
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
